# insighthub-backend/src/routes/rooms_routes.ts
@@ -1,0 +1,10 @@
+
+import express from 'express';
+import Room from '../controllers/rooms_controller';
+import  {authMiddleware} from '../controllers/auth_controller';
+
+const router = express.Router();
+
+router.get('/user/:receiverUserId', authMiddleware, Room.getRoomIdByUserIds);
+
+export default router;
